--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <div class="progress-container progress-primary"><span class="progress-badge">Python</span>
+                                        <div class="progress-container progress-primary"><span class="progress-badge">Figma</span>
                                             <div class="progress">
                                                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">72%</span>
                                             </div>
@@ -173,9 +173,18 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <div class="progress-container progress-primary"><span class="progress-badge">Selenium</span>
+                                        <div class="progress-container progress-primary"><span class="progress-badge">Excel</span>
                                             <div class="progress">
-                                                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">52%</span>
+                                                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">72%</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="progress-container progress-primary"><span class="progress-badge">Bootstrap</span>
+                                            <div class="progress">
+                                                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">82%</span>
                                             </div>
                                         </div>
                                     </div>
@@ -227,13 +236,13 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                                                    <a href="https://github.com/monikanaya/office-employee-management-system.git">
+                                                    <a href="https://monikanaya.github.io/codeai/">
                                                         <figure class="cc-effect"><img src="images/project-3.jpg" alt="Image" />
                                                             <figcaption>
-                                                                <div class="h4">Office-employee-management-system</div>
+                                                                <div class="h4">Code AI</div>
                                                                 <p>Web Development</p>
-                                                                <p>This project manages employee information. It's all about employee details: which employee joined or left, and all personal details. Technology used: Python, Django framework, SQLite, HTML,
-                                                                    CSS, and Bootstrap.
+                                                                <p>This is a generative AI app similar to Chat GPT code in React JS. Here This program generates answers for the questions of Users. Here, we include several animations. JavaScript, React.js,
+                                                                    Google Gemini, CSS, and Git were the technologies used.
                                                                 </p>
                                                             </figcaption>
                                                         </figure>
